updating gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-/RssMGMApp/obj/RssMGMApp.csproj.nuget.dgspec.json
-/RssMGMApp/obj/RssMGMApp.csproj.nuget.g.props
-/RssMGMApp/obj/RssMGMApp.csproj.nuget.g.targets
-/RssMGMApp/obj/project.assets.json
-/RssMGMApp/obj/Debug/*
-/RssMGMApp/obj/Debug/**
+.vs/*
+/RssMGMApp/bin/*
+/RssMGMApp/bin/**
+/RssMGMApp/obj/*
+/RssMGMApp/obj/**
